<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_assignment"
            android:icon="@drawable/ic_baseline_bag"
            android:title="@string/menu_assignment" />
        <item
            android:id="@+id/nav_class"
            android:icon="@drawable/ic_baseline_class"
            android:title="@string/menu_class" />
        <item
            android:id="@+id/nav_module"
            android:icon="@drawable/ic_baseline_module"
            android:title="@string/menu_module" />
        <item
            android:id="@+id/nav_enrollment"
            android:icon="@drawable/ic_baseline_calendar"
            android:title="@string/menu_enrollment" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_feedback"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/ic_baseline_insert_drive_file"
            android:title="@string/menu_result" />
        <item
            android:id="@+id/nav_question"
            android:icon="@drawable/ic_menu_question"
            android:title="@string/menu_question" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_call"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/nav_join"
            android:icon="@drawable/ic_baseline_create_24"
            android:title="@string/menu_join" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_round_logout"
            android:title="@string/menu_logout" />
    </group>



</menu>