<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="205dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/title_3_statistics_overview_right"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart3"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/title_4_statistics_overview_right"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart4"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvOverview1"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/title_statistics_overview_right"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="412dp"
        android:layout_height="205dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOverview1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="205dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/title_1_statistics_overview_right"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart1"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/title_2_statistics_overview_right"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart2"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>