<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_contact">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="486dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tienne"
            android:text="FPT FEEDBACK MANAGEMENT"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/tienne"
            android:text="@string/content_1_contact"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tienne"
            android:text="SAY HELLO"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/tienne"
            android:text="@string/content_2_contact"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tienne"
            android:includeFontPadding="false"
            android:text="JOBS"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/tienne"
            android:text="@string/content_3_contact"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgBtIns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="web"
                android:backgroundTint="@color/background_contact"
                android:clickable="true"
                android:cursorVisible="true"
                android:linksClickable="true"
                android:text="StackOverflow"
                app:srcCompat="@drawable/ic_instagram"
                tools:ignore="VectorDrawableCompat" />

            <ImageButton
                android:id="@+id/imgBtTwit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/background_contact"
                app:srcCompat="@drawable/ic_twitter90"
                tools:ignore="VectorDrawableCompat"
                android:clickable="true"
                android:autoLink="web"
                android:cursorVisible="true"
                android:text="StackOverflow"
                android:linksClickable="true"
                />

            <ImageButton
                android:id="@+id/imgBtFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/background_contact"
                app:srcCompat="@drawable/ic_facebook_f"
                tools:ignore="VectorDrawableCompat"
                android:clickable="true"
                android:autoLink="web"
                android:cursorVisible="true"
                android:text="StackOverflow"
                android:linksClickable="true"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>